# prompt-scheduler

./: .gitignore  LICENSE  README.md  pyproject.toml
macos/: Package.swift  README.md
macos/Scripts/: build_app.sh
macos/Sources/CSSShared/: EngineClient.swift  Models.swift  SchedulerDefaults.swift
macos/Sources/ClaudeSessionSchedulerUI/: AppController.swift  ClaudeSessionSchedulerApp.swift  MenuBarIcon.swift  Views.swift
macos/Sources/ClaudeSessionSchedulerUI/Resources/: AppIcon.icns
macos/Sources/PromptSchedulerShared/: EngineClient.swift  Models.swift  SchedulerDefaults.swift
macos/Sources/PromptSchedulerUI/: AppController.swift  MenuBarIcon.swift  PromptSchedulerApp.swift  Views.swift
macos/Tests/CSSSharedTests/: EngineClientTests.swift
macos/Tests/PromptSchedulerSharedTests/: EngineClientTests.swift
src/claude_session_scheduler/: __init__.py  auth.py  cli.py  ids.py  installer.py  launchd.py  paths.py  runner.py  storage.py
src/prompt_scheduler/: __init__.py  auth.py  cli.py  codex_rate_limits.py  installer.py  launchd.py  paths.py  providers.py  reset_parser.py  runner.py  schedules.py  storage.py
tests/: __init__.py  test_auth.py  test_cli.py  test_codex_rate_limits.py  test_installer.py  test_launchd.py  test_providers.py  test_reset_parser.py  test_runner.py  test_schedules.py  test_storage.py
